--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -62,7 +62,7 @@
                             <h6 class="dm_col_cnt_h">Ошибки разметки</h6>
                             <form id="dm_html_inspector_form">
                                 <div class="dm_form_row">
-                                    <input type="checkbox" class="dm_form_row_check" id="dm_his_mark_elements"/>
+                                    <input type="checkbox" class="dm_form_row_check" id="dm_his_mark_elements" checked="checked"/>
                                     <label for="dm_his_mark_elements">подсвечивать элементы</label>
                                 </div>
                                 <div class="dm_form_row_controls">
